--- a/scatterer/scatterer.csproj
+++ b/scatterer/scatterer.csproj
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -22,6 +21,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -38,24 +38,25 @@
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="UnityEngine">
-      <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\SteamLibrary\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\..\SteamLibrary\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\System.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\SteamLibrary\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System.Core">
       <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\System.Core.dll</HintPath>
     </Reference>
     <Reference Include="KSPAssets">
-      <HintPath>D:\gh\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\KSPAssets.dll</HintPath>
+      <HintPath>..\..\..\SteamLibrary\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\KSPAssets.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +65,7 @@
     <Compile Include="DataSerialization\ScattererCelestialBody.cs" />
     <Compile Include="DataSerialization\PlanetsListReader.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="Effects\Ocean\Utils\OceanCameraUpdateHook.cs" />
     <Compile Include="Utilities\WireFrame.cs" />
     <Compile Include="Utilities\DisableEffectsForTextureReplacer.cs" />
     <Compile Include="Utilities\DisableEffectsChecker.cs" />
@@ -117,20 +119,8 @@
     <Compile Include="Effects\Atmosphere\Utils\AtmospherePQS.cs" />
     <Compile Include="Effects\Atmosphere\Utils\AtmosphereProjector.cs" />
     <Compile Include="Utilities\DepthToDistanceCommandBuffer.cs" />
-    <Compile Include="e:\gh\scattererGithub\Scatterer\scatterer\Effects\Ocean\Utils\OceanCameraUpdateHook.cs" />
     <Compile Include="DataSerialization\MainSettingsReadWrite.cs" />
     <Compile Include="DataSerialization\PluginDataReadWrite.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataSerialization\" />
-    <Folder Include="Utilities\" />
-    <Folder Include="Effects\" />
-    <Folder Include="Effects\SunFlare\" />
-    <Folder Include="GUI\" />
-    <Folder Include="Utilities\Math\" />
-    <Folder Include="Effects\Occlusion\" />
-    <Folder Include="Effects\SunlightModulator\" />
-    <Folder Include="Effects\PlanetShine\" />
-    <Folder Include="Effects\Atmosphere\Utils\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
